--- a/BankTellerWorkbench/UnitTests/Infrastructure/Infrastructure.Library.Tests/Infrastructure.Library.Tests.csproj
+++ b/BankTellerWorkbench/UnitTests/Infrastructure/Infrastructure.Library.Tests/Infrastructure.Library.Tests.csproj
@@ -32,13 +32,11 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Practices.CompositeUI, Version=1.0.51205.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(SolutionDir)Lib\Microsoft.Practices.CompositeUI.dll</HintPath>
+    <Reference Include="Microsoft.Practices.CompositeUI">
+      <HintPath>..\..\..\..\..\..\Downloads\smartclient\PFiles\Microsoft SCSF\Lib\Microsoft.Practices.CompositeUI.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Practices.ObjectBuilder, Version=1.0.51205.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(SolutionDir)Lib\Microsoft.Practices.ObjectBuilder.dll</HintPath>
+    <Reference Include="Microsoft.Practices.ObjectBuilder">
+      <HintPath>..\..\..\..\..\..\Downloads\smartclient\PFiles\Microsoft SCSF\Lib\Microsoft.Practices.ObjectBuilder.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -78,8 +76,8 @@
     <Compile Include="Services\XmlStreamDependentModuleEnumeratorFixture.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Source\WebServices\ProfileCatalogImplementation\ProfileCatalogServiceImplementation.csproj">
-      <Project>{A75305AE-7336-4164-BC0F-AB44A1F0B3A7}</Project>
+    <ProjectReference Include="..\..\..\Source\Src\WebServices\ProfileCatalogImplementation\ProfileCatalogServiceImplementation.csproj">
+      <Project>{a75305ae-7336-4164-bc0f-ab44a1f0b3a7}</Project>
       <Name>ProfileCatalogServiceImplementation</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Library\UnitTest.Library.csproj">
